--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Rösta på din favorit!</h1>
-    <p id="question">Laddar fråga...</p>
+    <h3>Dagens fråga:</h3>
+    <p>&nbsp;</p>
+    <h1 id="question">Laddar fråga...</h1>
     <div id="options"></div>
     <p id="message"></p>
     <script src="script.js"></script>
